# ElecCtrl_Framework

./: .mxproject  CMakeLists.txt  ElecCtrl_Framework.ioc  README.md
Bsp/: bsp_init.h
Bsp/can/: bsp_can.c
Bsp/dwt/: bsp_dwt.h
Core/Inc/: can.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: can.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c
Modules/imu/: BMI088driver.c  ins_task.c
Modules/master_machine/: master_process.c
Modules/message_center/: message_center.c
Modules/motor/: motor_task.c
Modules/motor/DJImotor/: dji_motor.c
Modules/motor/DMmotor/: dmmotor.c
application/: robot.c  robot_def.c  robot_def.h  robot_task.h
application/chassis/: balance_chassis.c  balance_chassis.h
application/config/: config.h
application/config/infantry_robot/: infantry_config.c  infantry_config.h
cmake/framework/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
